# rules_gitops

./: .bazelrc  .gitignore  BUILD  COPYRIGHT  LICENSE  README.md  WORKSPACE  create_kind_cluster.sh  delete_kind_cluster.sh  e2e_test.sh  go.mod  go.sum  go_repositories.bzl  ping  renovate.json
.fasterci/: config.yaml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  ci.yml  release.yml  workspace_snippet.sh
examples/: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  e2e-test.sh
examples/helloworld/: BUILD  cwf.yaml  deployment.yaml  helloworld.go  helloworld_integration_test.go  helloworld_test.go  k8s_deploy_test.sh  service.yaml
examples/secrets/: BUILD.bazel  deployment.yaml
examples/secrets/it/secrets/secret-object-name/: apikey
examples/secrets/mynamespace/secrets/secret-object-name/: apikey
gitops/: BUILD  defs.bzl  deps.bzl  repositories.bzl
gitops/analysis/: BUILD  analysis.pb.go  analysis.proto
gitops/bazel/: BUILD  bazeltargets.go  bazeltargets_test.go
gitops/bitbucket/: BUILD  bitbucket.go  bitbucket_test.go
gitops/blaze_query/: BUILD  build.pb.go
gitops/commitmsg/: BUILD  commitmsg.go  commitmsg_test.go
gitops/digester/: BUILD  digester.go
gitops/exec/: BUILD  exec.go
gitops/git/: BUILD  git.go  server.go
gitops/k8ssort/: BUILD  sorter.go  sorter_test.go
gitops/prer/: BUILD  create_gitops_prs.go
gitops/sorter/: BUILD  main.go
gitops/testing/: BUILD  deployment1.yaml  deployment1_expected.txt  deployment2_expected.txt  deployment2_expected_template.txt  deployment_expected.txt  deployment_expected_template.txt  service.yaml  (+1 more)
hack/: update_go_deps.sh  update_go_protobufs.sh
it_manifest_filter/: BUILD  it_manifest_filter.go
resolver/: BUILD  resolver.go
skylib/: BUILD  cmd.sh.tpl  digester.bzl  external_image.bzl  k8s.bzl  k8s_cmd.sh.tpl  k8s_gitops.sh.tpl  k8s_test_namespace.sh.tpl  kubeconfig.bzl  push.bzl  run_in_workspace.bzl  stamp.bzl  templates.bzl  test_rules.bzl  toolchain.bzl
stamper/: BUILD  main.go
templating/: BUILD  main.go
(+120 files in other folders)
