load("@com_adobe_rules_gitops//gitops:defs.bzl", "k8s_deploy")

# prepare two environments: it and mynamespace. Each environment will have its own secret
# the secret with name secret-object-name is defined in the {it|mynamespace}/secrets/secret-object-name directories
# the secret name is the name of the directory in the secrets directory
# the secret key is the name of the file
# the secret value is the content of the file
#
# WARNING: rules_gitops secrets are intended to use in tests and development only.
# DO NOT USE THIS IN PRODUCTION!
# the secret value is not encrypted. It is recommended to use a secret management tool like vault or gcp secret manager

[
    k8s_deploy(
        name = ENV + "-server",
        cluster = CLUSTER,
        configmaps_renaming = "hash",  # add a hash to the configmap and secret names
        images = [
            "//helloworld:image",
        ],
        manifests = glob(["*.yaml"]),  # we will use deployment.yaml to demonstrate a secret injection
        namespace = ENV,
        secrets_srcs = glob([ENV + "/secrets/**/*"]),
    )
    for (ENV, CLUSTER) in [
        ("it", "it-cluster"),
        ("mynamespace", "dev-cluster"),
    ]
]
